@@ -55,10 +55,9 @@ extern void pk_term_hyperlink (const char *url, const char *id);
 extern int pk_term_end_hyperlink (void);
 
 /* Color handling.  */
-extern int pk_term_rgb_to_color (int red, int green, int blue);
-extern int pk_term_get_color (void);
-extern int pk_term_get_bgcolor (void);
-extern void pk_term_set_color (int color);
-extern void pk_term_set_bgcolor (int color);
+extern struct pk_color pk_term_get_color (void);
+extern struct pk_color pk_term_get_bgcolor (void);
+extern void pk_term_set_color (struct pk_color color);
+extern void pk_term_set_bgcolor (struct pk_color color);
 
 #endif /* PK_TERM_H */
